<resources>
    <string name="app_name">The Root</string>
    <string name="Welcome">Welcome to The Root</string>
    <string name="welcomeBeef">Beef Recipes</string>
    <string name="welcomeChicken">Chicken Recipes</string>
    <string name="welcomePasta">Pasta Recipes</string>
    <string name="welcomeDessert">Dessert Recipes</string>
    <string name="tagLine">A recipe sharing app for families</string>
    <string name="goCategory">Recipe by Category</string>
    <string name="goAuthor">Recipe by Author</string>
    <string name="goInfo">Info</string>
    <string name="goSearch">Search Recipes</string>
    <string name="goBeef">Beef</string>
    <string name="descRibs">Braised Beef Short Ribs with Parmesan Polenta</string>
    <string name="goChicken">Chicken</string>
    <string name="descThaiChix">Thai Chicken Lettuce Wraps</string>
    <string name="descOvenFriedChix">Oven Fried Chicken</string>
    <string name="goPasta">Pasta</string>
    <string name="descPasta">Fettuccini with Peas and Pancetta</string>
    <string name="goDessert">Dessert</string>
    <string name="descCheesecake">Mini Ramekin Cheesecakes</string>
    <string name="descPieCrust">Homemade Pie Crust</string>
    <string name="descAppleCrisp">Grandmas Apple Crisp</string>
    <string name="goAlicia">Alicia</string>
    <string name="goGrandma">Grandma Barb</string>
    <string name="mainMenu">Main Menu</string>
    <string name="exit">Exit</string>
    <string name="Ingredients">Ingredients:</string>
    <string name="titleBeefRibs">Braised Beef Short Ribs with Parmesan Polenta</string>
    <string name="headerBeefRibs">Author: Alicia\nPrep Time: 30 mins\nCook Time: 4 hours\nTotal Time: 4 hours 30 min\nYield: 4 servings</string>
    <string name="BeefRibsIngredients">For the Short Ribs:\n"\u2022 1.5 lbs. bone-in short ribs\n\u2022 2 Tbsp. extra virgin olive oil\n\u2022 salt and pepper to taste\n\u2022 1/2 a yellow onion, diced\n\u2022 cloves garlic, minced\n\u2022 12 oz. sliced mushrooms\n\u2022 2 Tbsp. tomato paste\n\u2022 2 cups red wine(I like cabernet)\n\u2022 2 bay leaves\n\u2022 2/3 cup water\n\u2022 1/4 cup fresh parsley, chopped
    \nFor the Polenta:\n\u2022 2 cups chicken stock\n\u2022 2 cups half and half\n\u2022 1 cup polenta or grits\n\u2022 2 tbsp. butter\n\u2022 1/2 cup freshly grated parmesan\n\u2022 salt and pepper to taste</string>
<string name="instructionsBeefRibs">Instructions:\nFor the Short Ribs:\n1. Preheat oven to 225 degrees\n2. Heat olive oil on the stovetop in a dutch oven or cast iron skillet over medium heat\n3. Season all sides of the short ribs with salt and pepper\n4. Add short ribs to hot oil and sear for 2-3 minutes on each side until well browned\n5. Remove short ribs from dutch oven and set aside\n6. Return dutch oven to burner and add onion and garlic. Add a little extra olive oil to the pan if needed. Saute 2-3 minutes until onion is translucent\n7. Add mushrooms to dutch oven and stir to combine. Cook 5-7 minutes more, until mushrooms have reduced and onions have begun to caramelize\n8. Add salt and pepper to taste\n9. Add tomato paste and stir to combine\n10. Add red wine to dutch oven to deglaze. Make sure to scrape any browned bits off the bottom of the pan with a wooden spoon\n11. Add bay leaves and water to the pot and stir to combine. Bring the mixture up to a low simmer, then remove from heat\n12. Add short ribs back to the dutch oven\n13. Cover dutch oven and place in 225 degree oven. Bake for 4 hours until short ribs easily pull apart with a fork or spatula
\n14. Remove short ribs from oven and let cool for 10-15 minutes. Skim off any fat that's risen to the top\n15. You can reduce the broth if you would like a more gravy like consistency\n16. Pull the short ribs into smaller pieces and remove the bones and the bay leaves from the pot. Serve short ribs immediately over Parmesan Polenta(recipe below). Garnish with a bit of fresh chopped parsley.
\nFor the Polenta:\nAdd 2 cups chicken stock and 2 cups half and half to a large saucepan over med-high heat. Bring to a boil and slowly whisk in the polenta, then reduce heat to med-low. Cook for 10 minutes, giving the polenta a stir every couple of minutes to keep from sticking to the bottom. When the polenta is cooked and thickened, add the butter and parmesan. Season with salt and pepper. Stir well to completely incorporate the cheese and butter.</string>


</resources>
