<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">


    <TextView
        android:id="@+id/lblCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:paddingLeft="15dp"
        android:gravity="center_horizontal"
        android:text="@string/goCategory"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="100dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:columnCount="1"
        android:rowCount="4"
        android:useDefaultMargins="true" >

        <Button
            android:id="@+id/btnBeef"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goBeef"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnChicken"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goChicken"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnPasta"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="2"
            android:text="@string/goPasta"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnDessert"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="3"
            android:text="@string/goDessert"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:textColor="@color/colorAccent" />

    </GridLayout>
</RelativeLayout>