<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alicia.therootapp.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:paddingLeft="20dp"
        android:gravity="center_horizontal"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/lbltagLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblWelcome"
        android:paddingLeft="30dp"
        android:text="@string/tagLine"
        android:textColor="#000000"
        android:textStyle="italic"/>



    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:columnCount="3"
        android:rowCount="2"
        android:useDefaultMargins="true" >

        <Button
            android:id="@+id/btnCategory"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:textColor="#000000"
            android:text="@string/goCategory"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/ic_list_black_24dp"
            android:drawableStart="@drawable/ic_list_black_24dp" />

        <Button
            android:id="@+id/btnAuthor"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goAuthor"
            android:textColor="#000000"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/ic_face_black_24dp"
            android:drawableStart="@drawable/ic_face_black_24dp"/>

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goInfo"
            android:textColor="#000000"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/ic_info_outline_black_24dp"
            android:drawableStart="@drawable/ic_info_outline_black_24dp"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goSearch"
            android:textColor="#000000"
            style="?android:attr/borderlessButtonStyle"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:drawableStart="@drawable/ic_search_black_24dp"/>

    </GridLayout>

</RelativeLayout>