<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorActivity">


    <TextView
        android:id="@+id/lblAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:paddingLeft="15dp"
        android:gravity="center_horizontal"
        android:text="@string/goAuthor"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorPrimaryDark" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="100dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:columnCount="1"
        android:rowCount="2"
        android:useDefaultMargins="true" >

        <Button
            android:id="@+id/btnAlicia"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goAlicia"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnGrandma"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goGrandma"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            tools:textColor="@color/colorAccent" />


    </GridLayout>
</RelativeLayout>